# blood-donation-platform

./: .editorconfig  .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  blood-management-system.sln  compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: README.md
.github/workflows/: dockerise-backend.yml  dockerise-frontend.yml  static.yml
analytics/: Dockerfile  go.mod  go.sum  main.go
backend/: .dockerignore  .env  Dockerfile  Program.cs  README.md  appsettings.Development.json  appsettings.json  backend.csproj  backend.http  pyproject.toml
backend/Helpers/: BloodPlatformContext.cs
backend/Models/: Appointment.cs  Bloodtype.cs  Donationcenter.cs  Donor.cs  Notification.cs  Shift.cs  Staff.cs  User.cs  Usersappointment.cs
backend/Properties/: launchSettings.json
backend/app/: __init__.py  dependencies.py  main.py
backend/app/core/: __init__.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  appointment.py  blood_type.py  donation_campaign.py  donation_centre.py  token.py  user.py
backend/app/routers/: appointments.py  authentication.py  donation_campaigns.py  donation_centres.py  users.py
backend/app/services/: auth_service.py  user_service.py
database/: create.sql  mock_users.csv  reset.sql  seed.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  (+1 more)
src/: App.vue  main.ts  style.css
supabase/: config.toml
(+45 files in other folders)
